# nebulascope

./: .gitignore  .thumbnail  Astro Inspector.dc.html  CITATION.cff  CLAUDE.md  CMakeLists.txt  NebulaScope iPad.dc.html  README.md  vcpkg.json
.github/workflows/: linux.yml  macos.yml  release.yml  windows.yml
docs/: ARCHITECTURE.md  BUILDING-linux.md  BUILDING-macos.md  BUILDING-windows.md  DECISIONS.md  MANUAL.md
docs/screenshots/: README.txt
icon/: NebulaScope.icns  make_icns.sh
ios/: README.md  project.yml
ios/NebulaScopeiOS/: ContentView.swift  HistogramPanel.swift  ImageCanvasView.swift  InspectorModel.swift  NebulaBridge.h  NebulaBridge.mm  NebulaScope-Bridging-Header.h  NebulaScopeApp.swift
ios/NebulaScopeiOS/cpp/: Colormap.cpp  Colormap.h  RenderCore.cpp  RenderCore.hpp  Stretch.cpp  Stretch.h
packaging/: nebulascope.desktop
src/: CMakeLists.txt
src/app/: AppInfo.h  Info.plist.in  app.qrc  main.cpp
src/core/: Adjustments.h  ChannelCombine.cpp  ChannelCombine.h  ColorTransport.cpp  ColorTransport.h  Colormap.cpp  Colormap.h  Convert.cpp  Convert.h  ImageData.h  ImageHeader.h  ImageStats.cpp  ImageStats.h  Preferences.cpp  Preferences.h  SexCatalog.cpp  SexCatalog.h  Stretch.cpp  Stretch.h  Transform.cpp  Transform.h  Wcs.cpp  Wcs.h
src/io/: FitsReader.cpp  FitsReader.h  FitsWriter.cpp  FitsWriter.h  ImageReader.cpp  ImageReader.h  ImageWriter.cpp  ImageWriter.h  QtImageReader.cpp  QtImageReader.h  TiffWriter.cpp  TiffWriter.h  XisfReader.cpp  XisfReader.h  XisfWriter.cpp  XisfWriter.h
src/render/: DisplayRenderer.cpp  DisplayRenderer.h  StretchModel.cpp  StretchModel.h
src/ui/: AnnotationLayer.cpp  AnnotationLayer.h  ColorBar.cpp  ColorBar.h  CombineDialog.cpp  CombineDialog.h  HistogramPanel.cpp  HistogramPanel.h  HistogramView.cpp  HistogramView.h  ImageView.cpp  ImageView.h  InfoPanel.cpp  InfoPanel.h  MainWindow.cpp  MainWindow.h  PreferencesDialog.cpp  PreferencesDialog.h  RotateDialog.cpp  RotateDialog.h  ScriptRunner.cpp  ScriptRunner.h  StarCombineDialog.cpp  StarCombineDialog.h  ViewGrid.cpp  ViewGrid.h
tests/: nstest.h  smoke.nsc  test_core.cpp  test_io.cpp
